--- a/turbo.json
+++ b/turbo.json
@@ -1,11 +1,15 @@
 {
+  "$schema": "https://turborepo.org/schema.json",
+  "baseBranch": "origin/main",
   "pipeline": {
-    "build": {
-      "dependsOn": ["^build"],
-      "outputs": ["dist/**", ".next/**"]
+    "install": {
+      "dependsOn": ["^install"]
     },
-    "lint": {
-      "outputs": []
+    "build": {
+      "dependsOn": ["^build"]
+    },
+    "dist": {
+      "dependsOn": ["sos-emulator-svelte#build", "^build"]
     },
     "dev": {
       "cache": false
