--- a/apps/emulator-svelte/package.json
+++ b/apps/emulator-svelte/package.json
@@ -18,6 +18,7 @@
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
+    "sos-plugin-types": "*",
     "svelte": "^3.0.0",
     "svelte-check": "^2.0.0",
     "svelte-preprocess": "^4.0.0",
@@ -25,18 +26,18 @@
     "typescript": "^4.0.0"
   },
   "dependencies": {
+    "@syncedstore/core": "~0.3.7",
+    "@syncedstore/svelte": "~0.3.6",
     "fp-ts": "^2.11.8",
     "localforage": "^1.10.0",
     "sirv-cli": "^2.0.0",
-    "uuid": "^8.3.2",
     "socket.io-client": "~4.4.1",
+    "sos-emulator-types": "1.0.0",
     "sos-plugin-types": "1.0.0",
-    "svelte-knobby": "^0.3.4",
     "svelte-fsm": "~1.1.2",
-    "@syncedstore/core": "~0.3.7",
-    "@syncedstore/svelte": "~0.3.6",
-    "yjs": "~13.5.28",
+    "svelte-knobby": "^0.3.4",
+    "uuid": "^8.3.2",
     "y-indexeddb": "~9.0.7",
-    "sos-emulator-types": "1.0.0"
+    "yjs": "~13.5.28"
   }
 }
