--- a/apps/emulator-electron/package.json
+++ b/apps/emulator-electron/package.json
@@ -9,7 +9,7 @@
     "build:electron": "tsc",
     "dist": "electron-builder",
     "start": "run-s build && run-p -l start:svelte start:electron",
-    "start:electron": "cross-env NODE_ENV=development electron .",
+    "start:electron": "electron .",
     "start:svelte": "cd ../emulator-svelte && run-s dev",
     "build:watch": "run-s \"build -- {1} {2}\" -- -w --preserveWatchOutput"
   },
@@ -24,25 +24,25 @@
   },
   "homepage": "https://github.com/SilentEchoUK/sos-packages#readme",
   "dependencies": {
-    "socket.io": "~4.4.1",
-    "ws": "~8.5.0",
+    "accepts": "~1.3.8",
     "axios": "~0.26.0",
-    "electron-updater": "~4.6.5",
+    "dotenv": "^16.0.0",
     "electron-is-dev": "~2.0.0",
     "electron-log": "~4.4.6",
-    "accepts": "~1.3.8",
+    "electron-updater": "~4.6.5",
     "fp-ts": "^2.11.8",
     "fs-extra": "~10.0.1",
+    "socket.io": "~4.4.1",
+    "sos-emulator-types": "1.0.0",
     "sos-plugin-types": "1.0.0",
-    "sos-emulator-types": "1.0.0"
+    "ws": "~8.5.0"
   },
   "devDependencies": {
-    "@types/ws": "~8.5.1",
     "@types/node": "17.0.21",
+    "@types/ws": "~8.5.1",
     "electron": "17.1.0",
     "electron-builder": "~22.14.13",
     "npm-run-all": "~4.1.5",
-    "cross-env": "~7.0.3",
     "typescript": "^4.0.0"
   },
   "peerDependencies": {
