--- a/release/sos-emulator/0.2.6/builder-debug.yml
+++ b/release/sos-emulator/0.2.6/builder-debug.yml
@@ -92,8 +92,8 @@ nsis:
       !insertmacro MUI_LANGUAGE "Vietnamese"
     !macroend
 
+    !include "C:\Users\eoinb\AppData\Local\Temp\t-5tMbSy\0-messages.nsh"
     !addplugindir /x86-unicode "C:\Users\eoinb\AppData\Local\electron-builder\Cache\nsis\nsis-resources-3.4.1\plugins\x86-unicode"
-    !include "C:\Users\eoinb\AppData\Local\Temp\t-UtXpsL\0-messages.nsh"
 
     Var newStartMenuLink
     Var oldStartMenuLink
