--- a/apps/emulator-svelte/package.json
+++ b/apps/emulator-svelte/package.json
@@ -18,7 +18,7 @@
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
-    "sos-plugin-types": "*",
+    "sos-plugin-types": "workspace:*",
     "svelte": "^3.0.0",
     "svelte-check": "^2.0.0",
     "svelte-preprocess": "^4.0.0",
