--- a/packages/easy-fractional-indexing/package.json
+++ b/packages/easy-fractional-indexing/package.json
@@ -18,6 +18,7 @@
     "@types/jest": "^27.4.1",
     "jest": "^27.5.1",
     "npm-run-all": "^4.1.5",
-    "ts-jest": "^27.1.3"
+    "ts-jest": "^27.1.3",
+    "typescript": "^4.0.0"
   }
 }
