--- a/release/sos-emulator/0.2.7/builder-debug.yml
+++ b/release/sos-emulator/0.2.7/builder-debug.yml
@@ -19,8 +19,8 @@ x64:
     - package.json
 nsis:
   script: |-
-    !include "E:\Projects\sos\sos-monorepo\node_modules\app-builder-lib\templates\nsis\include\StdUtils.nsh"
-    !addincludedir "E:\Projects\sos\sos-monorepo\node_modules\app-builder-lib\templates\nsis\include"
+    !include "C:\projects\sos-monorepo\node_modules\.pnpm\app-builder-lib@22.14.13\node_modules\app-builder-lib\templates\nsis\include\StdUtils.nsh"
+    !addincludedir "C:\projects\sos-monorepo\node_modules\.pnpm\app-builder-lib@22.14.13\node_modules\app-builder-lib\templates\nsis\include"
     !macro _isUpdated _a _b _t _f
       ${StdUtils.TestParameter} $R9 "updated"
       StrCmp "$R9" "true" `${_t}` `${_f}`
@@ -92,8 +92,8 @@ nsis:
       !insertmacro MUI_LANGUAGE "Vietnamese"
     !macroend
 
+    !include "C:\Users\eoinb\AppData\Local\Temp\t-mNz3JF\0-messages.nsh"
     !addplugindir /x86-unicode "C:\Users\eoinb\AppData\Local\electron-builder\Cache\nsis\nsis-resources-3.4.1\plugins\x86-unicode"
-    !include "C:\Users\eoinb\AppData\Local\Temp\t-cP7qxU\0-messages.nsh"
 
     Var newStartMenuLink
     Var oldStartMenuLink
