--- a/apps/emulator-svelte/package.json
+++ b/apps/emulator-svelte/package.json
@@ -32,8 +32,8 @@
     "localforage": "^1.10.0",
     "sirv-cli": "^2.0.0",
     "socket.io-client": "~4.4.1",
-    "sos-emulator-types": "1.0.0",
-    "sos-plugin-types": "1.0.0",
+    "sos-emulator-types": "workspace:*",
+    "sos-plugin-types": "workspace:*",
     "svelte-fsm": "~1.1.2",
     "svelte-knobby": "^0.3.4",
     "uuid": "^8.3.2",
