add game:final_whistle to list of events

--- a/packages/plugin-types/tsconfig.json
+++ b/packages/plugin-types/tsconfig.json
@@ -5,6 +5,8 @@
     "composite": true,
     "declarationMap": true,
     "incremental": true,
-    "lib": ["ES2015"]
-  }
+    "lib": ["ES2015"],
+    "moduleResolution": "node"
+  },
+  "include": ["index.ts"]
 }
